<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="left"
                        android:hint="@string/category_hint"
                        android:onClick="onClickSelectCategory"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_super_dark" />

                    <LinearLayout
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/blue"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleDirection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/direction"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDirection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="left"
                        android:hint="@string/direction_hint"
                        android:onClick="onClickSelectDirection"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey_super_dark" />

                    <LinearLayout
                        android:id="@+id/divider9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/blue"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/document"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="left"
                        android:hint="@string/document_hint"
                        android:onClick="onClickSelectDocument"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="center"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/select_country"
                        android:textColor="@color/black"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="center"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/select_city"
                        android:textColor="@color/black"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/blue"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/send_text"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <CheckBox
                        android:id="@+id/checkBoxWithSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/send"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/blue"
                        android:orientation="horizontal"
                        android:visibility="gone">

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/filter"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:text="@string/clear_filter"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>